<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

<!--    <include-->
<!--        layout="@layout/header"/>-->

    <!--  Contendor encabezado  -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_cl_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/main_tv_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:text="@string/main_tv_nombre"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/main_ib_user"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_modern_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_tv_nombre" />

        <TextView
            android:id="@+id/main_tv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="2dp"
            android:text="@string/main_tv_user"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/main_ib_user"
            app:layout_constraintTop_toBottomOf="@id/main_tv_nombre" />

        <ImageButton
            android:id="@+id/main_ib_location"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="26dp"
            android:src="@drawable/ic_modern_location"
            app:layout_constraintStart_toEndOf="@+id/main_tv_user"
            app:layout_constraintTop_toBottomOf="@id/main_tv_nombre" />

        <TextView
            android:id="@+id/main_tv_dein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="2dp"
            android:text="@string/main_tv_dein"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/main_ib_location"
            app:layout_constraintTop_toBottomOf="@id/main_tv_nombre"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    <RelativeLayout-->
<!--        android:id="@+id/main_f_frameLy"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/blue"-->
<!--        tools:ignore="MissingConstraints">-->

<!--        <TextView-->
<!--            android:id="@+id/main_tv_nombre"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@color/blue"-->
<!--            android:text="@string/main_tv_nombre"-->
<!--            android:textColor="@color/white"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:textSize="16sp"/>-->

<!--        <ImageButton-->
<!--            android:id="@+id/main_ib_teclado"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            android:src="@drawable/ic_modern_keyboard"/>-->

<!--        <ImageButton-->
<!--            android:id="@+id/main_ib_bateria"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            android:layout_marginEnd="70dp"-->
<!--            android:src="@drawable/ic_modern_battery"/>-->

<!--        <TextView-->
<!--            android:id="@+id/main_tv_user"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@color/blue"-->
<!--            android:text="@string/main_tv_user"-->
<!--            android:textColor="@color/white"-->
<!--            android:layout_marginTop="5dp"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:layout_below="@id/main_tv_nombre"-->
<!--            android:textSize="14sp"/>-->

<!--        <TextView-->
<!--            android:id="@+id/main_tv_56Db"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@color/blue"-->
<!--            android:text="@string/main_tv_user"-->
<!--            android:textColor="@color/white"-->
<!--            android:layout_marginTop="5dp"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:layout_below="@id/main_ib_teclado"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            android:textSize="14sp"/>-->

<!--    </RelativeLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>